test/qp/bad/nonlinear2.qp
-- This test should fail because a qubit is discarded in a boxed function.
let b = box[qubit * qubit] (fun (p, q) -> q) ;;

